# facturador

./: .gitignore  CMakeLists.txt  setup.sh
src/: main.cpp
src/controllers/: AuthController.cpp  AuthController.h  BillingController.cpp  BillingController.h  ClientController.cpp  ClientController.h  InventoryController.cpp  InventoryController.h  SupplierController.cpp  SupplierController.h
src/core/: Client.h  IAccessContract.h  IDiscountStrategy.cpp  IDiscountStrategy.h  Invoice.h  Product.h  Result.h  Supplier.h  Validation.h
src/database/: ClientRepository.cpp  ClientRepository.h  DatabaseManager.cpp  DatabaseManager.h  InvoiceRepository.cpp  InvoiceRepository.h  ProductRepository.cpp  ProductRepository.h  SupplierRepository.cpp  SupplierRepository.h  UserRepository.cpp  UserRepository.h
src/services/: InvoiceCalculator.cpp  InvoiceCalculator.h  InvoiceService.cpp  InvoiceService.h
src/ui/: adminwindow.cpp  adminwindow.h  clientdialog.cpp  clientdialog.h  invoicedialog.cpp  invoicedialog.h  invoiceviewdialog.cpp  invoiceviewdialog.h  login.cpp  login.h  productdialog.cpp  productdialog.h  registerwindows.cpp  registerwindows.h  repositorwindow.cpp  repositorwindow.h  supplierdialog.cpp  supplierdialog.h  userwindow.cpp  userwindow.h
